nginx/network/cnp-egress-nginx-hardening-rule-allow-only-port-25.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cnp-egress-nginx-hardening-rule-allow-only-port-25
  namespace: default         # Change namespace
spec:
  description: "Allow only SMTP Port 25"
  endpointSelector:
    matchLabels:
      app: my-nginx          # Change labels
  egress:
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "25"
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toEndpoints:
        - {}
